<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#273746"
    android:paddingBottom="5dp"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="1dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cheerfulbutter.test8.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="#ffff" />

                <TextView
                    android:id="@+id/period1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period1"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/bar1"
                    android:layout_width="match_parent"
                    android:layout_height="2.5dp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/period1Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/time1"
                    android:textAlignment="viewEnd"
                    android:textSize="30sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bar2"
                    android:layout_width="match_parent"
                    android:layout_height="2.5dp"
                    android:background="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/bar2"
                    android:background="#ffff" />

                <TextView
                    android:id="@+id/period2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period2"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/period2Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/time2"
                    android:textAlignment="viewEnd"
                    android:textSize="30sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bar3"
                    android:layout_width="match_parent"
                    android:layout_height="2.5dp"
                    android:background="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/bar3"
                    android:background="#ffff" />

                <TextView
                    android:id="@+id/period3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period3"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/period3Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/time3"
                    android:textAlignment="viewEnd"
                    android:textSize="30sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bar4"
                    android:layout_width="match_parent"
                    android:layout_height="2.5dp"
                    android:background="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/bar4"
                    android:background="#ffff" />

                <TextView
                    android:id="@+id/period4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period4"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/period4Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time4"

                    android:textAlignment="viewEnd"
                    android:textSize="30sp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="11dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bar5"
                    android:layout_width="match_parent"
                    android:layout_height="2.5dp"
                    android:background="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/bar5"
                    android:background="#ffff" />

                <TextView
                    android:id="@+id/period5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period5"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/period5Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/time5"
                    android:textAlignment="viewEnd"
                    android:textSize="30sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bar6"
                    android:layout_width="match_parent"
                    android:layout_height="2.5dp"
                    android:background="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/bar6"
                    android:background="#ffff" />

                <TextView
                    android:id="@+id/period6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period6"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/period6Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/time6"
                    android:textAlignment="viewEnd"
                    android:textSize="30sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bar7"
                    android:layout_width="match_parent"
                    android:layout_height="2.5dp"
                    android:background="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/bar7"
                    android:background="#ffff" />

                <TextView
                    android:id="@+id/period7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period7"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/period7Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/time7"
                    android:textAlignment="viewEnd"
                    android:textSize="30sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bar8"
                    android:layout_width="match_parent"
                    android:layout_height="2.5dp"
                    android:background="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/bar8"
                    android:background="#ffff" />

                <TextView
                    android:id="@+id/period8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period8"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/period8Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/time8"
                    android:textAlignment="viewEnd"
                    android:textSize="30sp" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/linear"
            android:orientation="horizontal"
            android:weightSum="1">
                <cheerfulbutter.test8.DynamicImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/test1" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:shadowColor="#5D6D7E"
        android:text="@string/announcementColon"
        android:textColor="#FDFEFE"
        android:textSize="20sp" />

</RelativeLayout>
